<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre" />
    
    <EditText
        android:id="@+id/Txtnombreempleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtnombreempleado" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dirección" />
    
    <EditText
        android:id="@+id/Txtdireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtdireccion" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sueldo" />
    
    <EditText
        android:id="@+id/Txtsueldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtsueldo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cargo" />

    <Spinner
        android:id="@+id/Spncargos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spncargos" />

    <Button
        android:id="@+id/buttonGuardarEmpleado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="Guardar"
        android:onClick="guardarNuevoEmpleado" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="Cancelar"
        android:onClick="registrarIrMenu" />

</LinearLayout>
