<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <TextView
        android:id="@+id/txvtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nuevo Cargo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txvsubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre del Cargo:" />
    
    <EditText
        android:id="@+id/Txtnombrecargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtnombrecargo" />
    <requestFocus />

    <Button
        android:id="@+id/Btnguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="guardarNuevoCargo"
        android:text="@string/btnguardar" />

    <Button
        android:id="@+id/Btncancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btncancelar" 
        android:onClick="registrarIrMenu"/>

</LinearLayout>
